Brandmaister digital contacts on 2021-03-06-222220

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 	├── <a href="./users_Belarus_2021_03_03-22_22_49.csv">users_Belarus_2021_03_03-22_22_49.csv</a><br>
 	├── <a href="./users_Belarus_2021_03_04-22_22_42.csv">users_Belarus_2021_03_04-22_22_42.csv</a><br>
 	├── <a href="./users_Belarus_2021_03_05-22_22_47.csv">users_Belarus_2021_03_05-22_22_47.csv</a><br>
+	├── <a href="./users_Belarus_2021_03_06-22_22_20.csv">users_Belarus_2021_03_06-22_22_20.csv</a><br>
 	├── <a href="./users_Ukraine_2021_02_08-11_13_31.csv">users_Ukraine_2021_02_08-11_13_31.csv</a><br>
 	├── <a href="./users_Ukraine_2021_02_08-22_18_07.csv">users_Ukraine_2021_02_08-22_18_07.csv</a><br>
 	├── <a href="./users_Ukraine_2021_02_09-22_21_30.csv">users_Ukraine_2021_02_09-22_21_30.csv</a><br>
@@ -85,6 +86,7 @@
 	├── <a href="./users_Ukraine_2021_03_03-22_22_48.csv">users_Ukraine_2021_03_03-22_22_48.csv</a><br>
 	├── <a href="./users_Ukraine_2021_03_04-22_22_41.csv">users_Ukraine_2021_03_04-22_22_41.csv</a><br>
 	├── <a href="./users_Ukraine_2021_03_05-22_22_46.csv">users_Ukraine_2021_03_05-22_22_46.csv</a><br>
+	├── <a href="./users_Ukraine_2021_03_06-22_22_19.csv">users_Ukraine_2021_03_06-22_22_19.csv</a><br>
 	├── <a href="./users_World_2021_02_08-11_13_29.csv">users_World_2021_02_08-11_13_29.csv</a><br>
 	├── <a href="./users_World_2021_02_08-22_18_05.csv">users_World_2021_02_08-22_18_05.csv</a><br>
 	├── <a href="./users_World_2021_02_09-22_21_27.csv">users_World_2021_02_09-22_21_27.csv</a><br>
@@ -111,12 +113,13 @@
 	├── <a href="./users_World_2021_03_02-22_22_27.csv">users_World_2021_03_02-22_22_27.csv</a><br>
 	├── <a href="./users_World_2021_03_03-22_22_46.csv">users_World_2021_03_03-22_22_46.csv</a><br>
 	├── <a href="./users_World_2021_03_04-22_22_39.csv">users_World_2021_03_04-22_22_39.csv</a><br>
-	└── <a href="./users_World_2021_03_05-22_22_44.csv">users_World_2021_03_05-22_22_44.csv</a><br>
+	├── <a href="./users_World_2021_03_05-22_22_44.csv">users_World_2021_03_05-22_22_44.csv</a><br>
+	└── <a href="./users_World_2021_03_06-22_22_16.csv">users_World_2021_03_06-22_22_16.csv</a><br>
 	<br><br>
 	</p>
 	<p>
 
-2 directories, 81 files
+2 directories, 84 files
 	<br><br>
 	</p>
 	<hr>
